# clear_arch_py

./: .gitignore  .pylintrc  Dockerfile  README.md  api.http  docker-compose.override.example.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.docker/dbdata/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  ca.pem  client-cert.pem  ib_buffer_pool  server-cert.pem
.docker/dbdata/#innodb_redo/: #ib_redo10  #ib_redo11  #ib_redo12  #ib_redo13  #ib_redo14  #ib_redo15  #ib_redo16  #ib_redo9
.docker/dbdata/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
.docker/dbdata/cap@002ddb/: auth_group.ibd  auth_group_permissions.ibd  auth_permission.ibd  auth_user.ibd  auth_user_groups.ibd  auth_user_user_permissions.ibd  categories.ibd  django_admin_log.ibd  django_content_type.ibd  django_session.ibd
.docker/dbdata/mysql/: general_log_213.sdi  slow_log_214.sdi
.docker/dbdata/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  (+98 more)
.docker/zsh/: start-app.sh
envs/: .env.e2e.example  .env.example  .env.test.example  .env.tst
src/core/: conftest.py  pytest_plugin.py
src/django_app/: config.py  container.py  settings.py  settings_env.py  urls.py
(+61 files in other folders)
