[project]
name = "Pyhton_template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nei Fassula", email = "cfassula@gmail.com"},
]
dependencies = [
    "django>=5.0.4",
    "djangorestframework>=3.15.1",
    "django-extensions>=3.2.3",
    "dependency-injector>=4.41.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "dj-database-url>=1.3.0",
    "python-dotenv>=1.0.1",
    "pydantic-core>=2.18.1",
    "mysqlclient>=2.2.4",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.1.0",
    "pylint>=3.1.0",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.8.0",
    "model-bakery>=1.17.0",
    "faker>=24.8.0",
]
[tool.pdm.scripts]
manage = "python ./src/django_app/manage.py"
pep8 = "autopep8 --in-place --recursive ./src"
pylint = "pylint ./src"
runserver = "pdm run manage runserver 0.0.0.0:8000"
test = "pytest --ignore __pypackages__"
test_cov = "pytest --ignore __pypackages__ --cov --cov-fail-under=80"
test_cov_html = "pdm run test_cov --cov-report html:./__coverage"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
